1999-10-18  Lyndon Tremblay  <humasect@coolmail.com>

	* nstextfields.m: Added to test NSTextField, NSSecureTextField.

Tue Oct 12  1999  Nicola Pero  <n.pero@mi.flashnet.it>

	* Calculator: Added icon by Andrew Lindesay; reduced button
 	spacing (suggestion by Andrew Lindesay); added key equivalents.

1999-10-07    <fedor@gnu.org>

	* Calculator: New test from Nicola Pero <n.pero@mi.flashnet.it>

1999-09-09  Gerrit van Dyk <gerritvd@decillion.net>

	* nscombobox.m: Added ComboBox test

1999-08-22  Gerrit van Dyk <gerritvd@decillion.net>

	* nsprogressindicator.m: Added progressIndicator test

1999-08-19  Michael Hanni  <mhanni@sprintmail.com>

	* gstextnetwork.m: some changes.
	* popupbuttons.m: a few changes to help debug problems other
	people have reported.
	* menu.m: moved some stuff around to better allow ui testing.

1999-09-07  Adam Fedor  <fedor@gnu.org>

	* buttons.m ([buttonsController -applicationDidFinishLaunching:]): 
	Move main menu creation to here, since it screws up xdps if it's
	in main - must look into this...

1999-08-21  Richard frith-Macdonald <richard@brainstorm.co.uk>

	Added simple menu with 'quit' item for all test apps.

1999-07-30  Michael Hanni  <mhanni@sprintmail.com>

	* Several images for new popup in popupbuttons.app:
	animations.tiff appearance.tiff configs.tiff dock.tiff (images
	taken from Window Maker, I hope this is ok.)

1999-07-26  Michael Hanni  <mhanni@sprintmail.com>

	* GNUstepInstaller.m: copy of nstabview.m, save this app uses no
	tabs and has buttons in the TabView for movement through tabs,
	quite cool.
	* nstabview.m: added a delegate to the nstabview. Delegate
	responds to all selectors and gives debug information. In
	addition, with the delegate you cannot click on the "Natalie"
	tab, it is disabled.

1999-07-24  Michael Hanni  <mhanni@sprintmail.com>

	* gstextnetwork.m: new test app to test NSTextView/TextNetwork.
	* Edit/*: minor fixes to use NSText directly so for the time being
	Edit.app still works somewhat.